// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionList render correctly 1`] = `
<div
  id="transactions"
>
  <h3>
    Block #
    123457
  </h3>
  <h5>
    1
     transactions with value
  </h5>
  <a
    href="#blocks"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ⬆
    </span>
    Back to Blocks list
  </a>
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-bordered table-striped table-hover"
    >
      <caption>
        List of transactions with value in a selected block
      </caption>
      <thead>
        <tr>
          <th>
            hash #
          </th>
          <th>
            from
          </th>
          <th>
            to
          </th>
          <th>
            value
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>
            <a
              href="https://etherscan.io/tx/0xdd00f5aaae1af883e40098c927a6a8dc230b941654c3a2a5d9ad4c79f79c558a"
              target="_blank"
            >
              0xdd00f...
            </a>
          </th>
          <th>
            0x68b1a...
          </th>
          <th>
            0x8ad76...
          </th>
          <th>
            0.19988903
             Ether
          </th>
        </tr>
      </tbody>
    </table>
  </div>
  <a
    href="#blocks"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ⬆
    </span>
    Back to Blocks list
  </a>
</div>
`;

exports[`TransactionList render correctly when some block has 0 transaction with value 1`] = `
<div
  id="transactions"
>
  <h3>
    Block #
    123458
  </h3>
  <h5>
    0
     transactions with value
  </h5>
  <a
    href="#blocks"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ⬆
    </span>
    Back to Blocks list
  </a>
  <div
    className="table-responsive"
  >
    <table
      className="table table-sm table-bordered table-striped table-hover"
    >
      <caption>
        List of transactions with value in a selected block
      </caption>
      <thead>
        <tr>
          <th>
            hash #
          </th>
          <th>
            from
          </th>
          <th>
            to
          </th>
          <th>
            value
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <a
    href="#blocks"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ⬆
    </span>
    Back to Blocks list
  </a>
</div>
`;

exports[`TransactionList render null when no blocks 1`] = `null`;

exports[`TransactionList render null when no selectedBlock 1`] = `null`;
